--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,4 +189,9 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="title_activity_test_exam">TestExamActivity</string>
+    <string name="title_prev">Poprzednie</string>
+    <string name="title_end">Zakończ</string>
+    <string name="title_next">Następne</string>
+    <string name="title_activity_details">Details</string>
 </resources>
